--- a/SamsWarehouse/appsettings.json
+++ b/SamsWarehouse/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SamsWarehouse": "Server=WIZARD\\SQLEXPRESS;Database=SamsWarehouseDB;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
