update connection string

--- a/SamsWarehouse/appsettings.json
+++ b/SamsWarehouse/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SamsWarehouse": "Server=WIZARD\\SQLEXPRESS;Database=SamsWarehouseDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "SamsWarehouse": "Server=.\\SQLEXPRESS;Database=SamsWarehouseDB;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
